# dj-rest-firebase

./: LICENSE  README.md  boot_django.py  pyproject.toml  setup.cfg
dj_rest_firebase/: admin.py  apps.py  auth.py  endpoints.py  models.py  views.py
dj_rest_firebase/migrations/: 0001_initial.py
