[metadata]
name = dj_rest_firebase
version = 0.6.6
description = Firebase for Django Rest Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoolBytesIN/dj-rest-firebase
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.0
install_requires =
    Django >= 2.2
    requests >= 2.0.0
    pyotp >= 2.0.0
    pycryptodome >= 3.9.6